Update Linkedin info

--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -33,7 +33,7 @@
     </li>
     <li>Name 2 - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
     </li>
-    <li>Name 3 - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
+    <li>Jiawei Guo - <a href="https://www.linkedin.com/in/jiawei-g-0022a7250" target="_blank">LinkedIn profile</a> (GitHub username: 8848titanium)
     </li>
     <li>Ke Zhang - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
     </li>
