Update Group 4 - A2 Details for CP3402.html

--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -35,7 +35,7 @@
     </li>
     <li>Jiawei Guo - <a href="https://www.linkedin.com/in/jiawei-g-0022a7250" target="_blank">LinkedIn profile</a> (GitHub username: 8848titanium)
     </li>
-    <li>Ke Zhang - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
+    <li>Ke Zhang - <a href="www.linkedin.com/in/ke-zhang-2a1983214" target="_blank">LinkedIn profile</a> (GitHub username: technical-zebra)
     </li>
   </ul>
   <h2>Goal/s</h2>
