update the profile

--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -31,7 +31,7 @@
   <ul>
     <li>Name 1 - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
     </li>
-    <li>Name 2 - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
+    <li>Name 2 - <a href="https://www.linkedin.com/in/theeradon-somsri-92b9b8222/" target="_blank">LinkedIn profile</a> (GitHub username: jangchiang)
     </li>
     <li>Jiawei Guo - <a href="https://www.linkedin.com/in/jiawei-g-0022a7250" target="_blank">LinkedIn profile</a> (GitHub username: 8848titanium)
     </li>
