--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -31,6 +31,8 @@
   <ul>
     <li>Name 1 - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
     </li>
+    <li>Name 2 - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
+    </li>
     <li>Theeradon Somsri - <a href="https://www.linkedin.com/in/theeradon-somsri-92b9b8222/" target="_blank">LinkedIn profile</a> (GitHub username: jangchiang)
     </li>
     <li>Jiawei Guo - <a href="https://www.linkedin.com/in/jiawei-g-0022a7250" target="_blank">LinkedIn profile</a> (GitHub username: 8848titanium)
@@ -43,16 +45,20 @@
   <h2>Project Links</h2>
   <ul>
     <li><a href="http://??" target="_blank">Production Site</a></li>
-    <li><a href="http://??" target="_blank">Staging Site</a></li>
-    <li><a href="http://trello.com/??" target="_blank">Project management board</a></li>
-    <li><a href="https://github.com/cp3402-students/??" target="_blank">GitHub repository - project/theme</a></li>
-    <li><a href="https://github.com/cp3402-students/??" target="_blank">GitHub repository - environment</a></li>
-    <li><a href="https://itatjcu.slack.com/messages/??" target="_blank">Slack group</a> (right-click on your Slack group
+    <li><a href="https://ec2-13-212-212-132.ap-southeast-1.compute.amazonaws.com/" target="_blank">Staging Site</a></li>
+    <li><a href="https://trello.com/b/3eQpABJc/cp3402-cms" target="_blank">Project management board</a></li>
+    <li><a href="https://github.com/cp3402-students/cp3402-2022-1-site-group4-sp52" target="_blank">GitHub repository - project/theme</a></li>
+    <li><a href="https://github.com/cp3402-students/cp3402-2022-1-site-group4-sp52" target="_blank">GitHub repository - environment</a></li>
+    <li><a href="https://discord.gg/UdQry9yh82" target="_blank">Discord group</a> (right-click on your Discord group
       name and choose "Copy Link" to get this URL).</li>
   </ul>
   <h2>Local Environments</h2>
+  <p>We use github to handle version control of of the theme files and wordpress content for all team members, meanwhile we also use xampp to build our local wordpress server.</p>
+  <p>Most of members use Visual Studio Code as their primary IDE for development , after we made the changes, we will test how it work on our local wordpress development server.</p>
+  <p>However there are some inconviences as we need to copy the theme file to the cloned repository every time after we modifiy the theme in order to update it.</p>
   <p>Brief description of local environments used by team members</p>
   <h2>References (sources of copied resources)</h2>
+  <p>Icons: https://icons8.com/icons/</p>
   <p>...</p>
   <h2>Login Information for WordPress admin</h2>
   <p>Login: admin</p>
