Updated a2 details.html

--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -42,7 +42,10 @@
     <li>Yaowen Zhang - <a href="https://www.linkedin.com/in/zhang-yaowen-17620223a/" target="_black">LinkedIn profile</a></li>
   </ul>
   <h2>Goal/s</h2>
-  <p>Briefly and clearly describe the measurable goal/s of your website here.</p>
+  <p>The goals of this website are:</p>
+  <li>Increase overall course enrollment by 30% to Baizonn Learning Centre before 2023</li>
+  <li>Provide a modern way to advertise courses and attract popularity which will eventually lead to more enrollment to Baizonn Learning Centre</li>
+  <li>Provide a centralised place allow Baizonn Learning Centre can conveniently display and manage all information. </li>
   <h2>Project Links</h2>
   <ul>
     <li><a href="http://??" target="_blank">Production Site</a></li>
@@ -64,9 +67,6 @@
   <h2>Login Information for WordPress admin</h2>
   <p>Login: admin</p>
   <p>Password: admin123</p>
-  <h2>Comments</h2>
-  <p>Add any additional details or comments here if needed (e.g. information needed to see the full functionality of the
-    site)... or you can remove this section.</p>
 </body>
 
 </html>
