--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -49,7 +49,8 @@
   <h2>Project Links</h2>
   <ul>
     <li><a href="http://??" target="_blank">Production Site</a></li>
-    <li><a href="https://ec2-13-212-212-132.ap-southeast-1.compute.amazonaws.com/" target="_blank">Staging Site</a></li>
+    <li><a href="http://group4-cp3402.x10.mx/wp/" target="_blank">Staging Site</a></li>
+    <li><a href="https://ec2-13-212-212-132.ap-southeast-1.compute.amazonaws.com/" target="_blank">Deliver Site</a></li>
     <li><a href="https://trello.com/b/3eQpABJc/cp3402-cms" target="_blank">Project management board</a></li>
     <li><a href="https://github.com/cp3402-students/cp3402-2022-1-site-group4-sp52" target="_blank">GitHub repository - project/theme</a></li>
     <li><a href="https://github.com/cp3402-students/cp3402-2022-1-site-group4-sp52" target="_blank">GitHub repository - environment</a></li>
