Update Linkedin detail

--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -29,9 +29,7 @@
   <h1>CP3402 - Assignment 2 - Group ??</h1>
   <h2>Names & Profiles</h2>
   <ul>
-    <li>Name 1 - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
-    </li>
-    <li>Name 2 - <a href="https://www.linkedin.com/in/??" target="_blank">LinkedIn profile</a> (GitHub username: ??)
+    <li>Chenyuhan Shen - <a href="www.linkedin.com/in/chen-shen-91747b250" target="_blank">LinkedIn profile</a> (GitHub username: chenyuhanjcu)
     </li>
     <li>Theeradon Somsri - <a href="https://www.linkedin.com/in/theeradon-somsri-92b9b8222/" target="_blank">LinkedIn profile</a> (GitHub username: jangchiang)
     </li>
@@ -39,7 +37,7 @@
     </li>
     <li>Ke Zhang - <a href="www.linkedin.com/in/ke-zhang-2a1983214" target="_blank">LinkedIn profile</a> (GitHub username: technical-zebra)
     </li>
-    <li>Yaowen Zhang - <a href="https://www.linkedin.com/in/zhang-yaowen-17620223a/" target="_black">LinkedIn profile</a></li>
+    <li>Yaowen Zhang - <a href="https://www.linkedin.com/in/zhang-yaowen-17620223a/" target="_black">LinkedIn profile</a> (GitHub username: moverest2148)</li>
   </ul>
   <h2>Goal/s</h2>
   <p>The goals of this website are:</p>
