--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -48,7 +48,7 @@
   <li>Provide a centralised place allow Baizonn Learning Centre can conveniently display and manage all information. </li>
   <h2>Project Links</h2>
   <ul>
-    <li><a href="http://??" target="_blank">Production Site</a></li>
+    <li><a href="localhost/wordpress" target="_blank">Local Production Site</a></li>
     <li><a href="http://group4-cp3402.x10.mx/wp/" target="_blank">Staging Site</a></li>
     <li><a href="https://ec2-13-212-212-132.ap-southeast-1.compute.amazonaws.com/" target="_blank">Deliver Site</a></li>
     <li><a href="https://trello.com/b/3eQpABJc/cp3402-cms" target="_blank">Project management board</a></li>
