Update Group 4 - A2 Details for CP3402.html

--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Group ?? - A2 Details for CP3402</title>
+  <title>Group 04 - A2 Details for CP3402</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <style type="text/css">
     body {
@@ -23,10 +23,8 @@
 </head>
 
 <body>
-  <p>
-    Note: replace the ?? with your own content, and complete all of the details.
-  </p>
-  <h1>CP3402 - Assignment 2 - Group ??</h1>
+
+  <h1>CP3402 - Assignment 2 - Group 04</h1>
   <h2>Names & Profiles</h2>
   <ul>
     <li>Chenyuhan Shen - <a href="www.linkedin.com/in/chen-shen-91747b250" target="_blank">LinkedIn profile</a> (GitHub username: chenyuhanjcu)
