--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Group 04 - A2 Details for CP3402</title>
+  <title>Group ?? - A2 Details for CP3402</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <style type="text/css">
     body {
@@ -23,11 +23,13 @@
 </head>
 
 <body>
-
-  <h1>CP3402 - Assignment 2 - Group 04</h1>
+  <p>
+    Note: replace the ?? with your own content, and complete all of the details.
+  </p>
+  <h1>CP3402 - Assignment 2 - Group ??</h1>
   <h2>Names & Profiles</h2>
   <ul>
-    <li>Chenyuhan Shen - <a href="www.linkedin.com/in/chen-shen-91747b250" target="_blank">LinkedIn profile</a> (GitHub username: chenyuhanjcu)
+    <li>Chenyuhan Shen - <a href="https://www.linkedin.com/in/chen-shen-91747b250" target="_blank">LinkedIn profile</a> (GitHub username: chenyuhanjcu)
     </li>
     <li>Theeradon Somsri - <a href="https://www.linkedin.com/in/theeradon-somsri-92b9b8222/" target="_blank">LinkedIn profile</a> (GitHub username: jangchiang)
     </li>
@@ -35,7 +37,8 @@
     </li>
     <li>Ke Zhang - <a href="www.linkedin.com/in/ke-zhang-2a1983214" target="_blank">LinkedIn profile</a> (GitHub username: technical-zebra)
     </li>
-    <li>Yaowen Zhang - <a href="https://www.linkedin.com/in/zhang-yaowen-17620223a/" target="_black">LinkedIn profile</a> (GitHub username: moverest2148)</li>
+    <li>Yaowen Zhang - <a href="https://www.linkedin.com/in/zhang-yaowen-17620223a/" target="_black">LinkedIn profile</a></li> (GitHub username: moverest2148)
+    </li>
   </ul>
   <h2>Goal/s</h2>
   <p>The goals of this website are:</p>
@@ -57,7 +60,6 @@
   <p>We use github to handle version control of of the theme files and wordpress content for all team members, meanwhile we also use xampp to build our local wordpress server.</p>
   <p>Most of members use Visual Studio Code as their primary IDE for development , after we made the changes, we will test how it work on our local wordpress development server.</p>
   <p>However there are some inconviences as we need to copy the theme file to the cloned repository every time after we modifiy the theme in order to update it.</p>
-  <p>Brief description of local environments used by team members</p>
   <h2>References (sources of copied resources)</h2>
   <p>Icons: https://icons8.com/icons/</p>
   <p>...</p>
