Update Group 4 - A2 Details for CP3402.html

--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -62,7 +62,7 @@
   <p>However there are some inconviences as we need to copy the theme file to the cloned repository every time after we modifiy the theme in order to update it.</p>
   <h2>References (sources of copied resources)</h2>
   <p>Icons: https://icons8.com/icons/</p>
-  <p>...</p>
+  <p>Design concepts: https://www.pinterest.com/</p>
   <h2>Login Information for WordPress admin</h2>
   <p>Login: admin</p>
   <p>Password: admin123</p>
