Update Group 4 - A2 Details for CP3402.html

--- a/Group 4 - A2 Details for CP3402.html
+++ b/Group 4 - A2 Details for CP3402.html
@@ -35,7 +35,7 @@
     </li>
     <li>Jiawei Guo - <a href="https://www.linkedin.com/in/jiawei-g-0022a7250" target="_blank">LinkedIn profile</a> (GitHub username: 8848titanium)
     </li>
-    <li>Ke Zhang - <a href="www.linkedin.com/in/ke-zhang-2a1983214" target="_blank">LinkedIn profile</a> (GitHub username: technical-zebra)
+    <li>Ke Zhang - <a href="https://www.linkedin.com/in/ke-zhang-2a1983214" target="_blank">LinkedIn profile</a> (GitHub username: technical-zebra)
     </li>
     <li>Yaowen Zhang - <a href="https://www.linkedin.com/in/zhang-yaowen-17620223a/" target="_black">LinkedIn profile</a></li> (GitHub username: moverest2148)
     </li>
@@ -47,9 +47,9 @@
   <li>Provide a centralised place allow Baizonn Learning Centre can conveniently display and manage all information. </li>
   <h2>Project Links</h2>
   <ul>
-    <li><a href="localhost/wordpress" target="_blank">Local Production Site</a></li>
-    <li><a href="http://group4-cp3402.x10.mx/wp/" target="_blank">Staging Site</a></li>
-    <li><a href="https://ec2-13-212-212-132.ap-southeast-1.compute.amazonaws.com/" target="_blank">Deliver Site</a></li>
+    <li><a href="localhost/wordpress/" target="_blank">Local Production Site</a></li>
+    <li><a href="http://group4-cp3402.x10.mx/wp/" target="_blank">Staging and Testing Site (X10)</a></li>
+    <li><a href="https://ec2-13-212-212-132.ap-southeast-1.compute.amazonaws.com/" target="_blank">Deliver Site (AWS)</a></li>
     <li><a href="https://trello.com/b/3eQpABJc/cp3402-cms" target="_blank">Project management board</a></li>
     <li><a href="https://github.com/cp3402-students/cp3402-2022-1-site-group4-sp52" target="_blank">GitHub repository - project/theme</a></li>
     <li><a href="https://github.com/cp3402-students/cp3402-2022-1-site-group4-sp52" target="_blank">GitHub repository - environment</a></li>
